[package]
name = "mptgen"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
rand = "0.8.5"
rustyline = "11.0.0"
structopt = "0.3.26"
thiserror = "1.0.40"
tokenizers = "0.13.3"

[build-dependencies]
bindgen = "0.65.1"
